Fix CSS styles and improve UI elements across multiple components

--- a/src/assets/css_modules/btnQuantity.module.css
+++ b/src/assets/css_modules/btnQuantity.module.css
@@ -24,6 +24,5 @@
 }
 
 .btn_quantity:hover {
-    background-color: var(--tertiary);
-    color: var(--darker);
+    background-color: var(--primary);
 }
