--- a/src/index.css
+++ b/src/index.css
@@ -67,6 +67,11 @@ body::before {
   background-color: var(--darker);
 }
 
+.bg-warning {
+  background-color: var(--tertiary) !important;
+  color: var(--darker) !important;
+}
+
 /*accordion*/
 
 .my-custom-accordion {
@@ -157,6 +162,14 @@ body::before {
 .jumbo-title {
   font-size: 1.6rem;
   font-weight: 800;
+  -webkit-text-stroke: var(--darker);
+  color: white;
+  text-shadow:
+    3px 3px 0 #000,
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
 }
 
 .jumbo_img {
@@ -428,7 +441,7 @@ footer {
   }
 
   .text-price {
-    color: var(--background);
+    color: var(--text-light);
     text-shadow: 2px 2px var(--darker);
   }
 
@@ -452,14 +465,15 @@ footer {
 
 .btn_chart {
   background-color: var(--darker);
-  color: var(--background);
+  color: var(--text-light);
   padding: 1rem;
   border: none;
   border-radius: 20px;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
 
   &:hover {
-    background-color: var(--tertiary);
+    background-color: var(--primary);
+    color: var(--text-light);
   }
 }
 
